--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@ and open the template in the editor.
                 <a id="btn-settings" >CONFIGURACIONES</a>
                 <a id="btn-report" >REPORTE</a>
                 <a id="btn-place" >LOCALIDADES</a>
+                <a id="btn-logout" >SALIR</a>
             </div>
         </div>
     </body>
