--- a/index.html
+++ b/index.html
@@ -146,12 +146,12 @@ and open the template in the editor.
                     <div class="mui-row">
                         <div class="mui-col-xs-6">
                             <div class="mui-form-group">
-                                <input type="text" class="mui-form-control" placeholder="Localidad" id="place-name">
+                                <input type="text" class="mui-form-control" placeholder="Localidad" id="mui-place-name">
                             </div>
                             <div class="mui-form-group">
-                                <textarea class="mui-form-control" placeholder="Comentarios" id="place-comments"></textarea>
+                                <textarea class="mui-form-control" placeholder="Comentarios" id="mui-place-comments"></textarea>
                             </div>
-                            <button class="mui-btn mui-btn-primary mui-btn-lg" id="save-place">Agregar</button>
+                            <button class="mui-btn mui-btn-primary mui-btn-lg" id="btn-save-place">Agregar</button>
                         </div>
                         <div class="mui-col-xs-6">
                             <table id="table-place" class="display" cellspacing="0" width="100%">
