add user.js and userComments.js

--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
                         <div class="mui-form-group">
                             <textarea class="mui-form-control" placeholder="Comentarios" id="comments"></textarea>
                         </div>
+                        <div class="mui-form-group">
+                            <textarea class="mui-form-control" placeholder="Comentarios" id="admin-comments" disabled></textarea>
+                            <label>Notas Importantes</label>
+                        </div>
                         <button class="mui-btn mui-btn-primary mui-btn-lg" id="btn-in">ENTRADA</button><button class="mui-btn mui-btn-danger mui-btn-lg" id="btn-out">SALIDA</button>
                     </div>
                     <div class="mui-col-md-4"></div>
