--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
                                     </tr>
                                 </tfoot>
                             </table>
+                            <button class="mui-btn mui-btn-danger" id="btn-delete-place">BORRAR</button>
                         </div>
                     </div>
                     <span class="close-settings" id="btn-close-place">×</span>
