user types, user permissions, user comments

--- a/index.html
+++ b/index.html
@@ -195,7 +195,6 @@
                                         <th>NOMBRE COMPLETO</th>
                                         <th>ES USUARIO?</th>
                                         <th>COMENTARIOS</th>
-                                        <th>ACCION</th>
                                     </tr>
                                 </thead>
                                 <tfoot>
@@ -205,10 +204,10 @@
                                         <th>NOMBRE COMPLETO</th>
                                         <th>ES USUARIO?</th>
                                         <th>COMENTARIOS</th>
-                                        <th>ACCION</th>
                                     </tr>
                                 </tfoot>
                             </table>
+                            <button class="mui-btn" id="btn-user-admin">Administrador</button><button class="mui-btn" id="btn-user-supervisor">Supervisor</button><button class="mui-btn" id="btn-user-operator">Operador</button>
                         </div>
                     </div>
                     <span class="close-settings" id="btn-close-user">×</span>
